(test) Fixes image resizing on mobile IE

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -1099,7 +1099,8 @@
 		display: block;
 		text-align: center;
 		img {
-			display: inline-block;
+			display: block;
+			max-width: 100%;
 		}
 	}
 	span.image-title {
